Fix uneven sizes of images on mobile

--- a/_source/assets/css/_components/work-card.css
+++ b/_source/assets/css/_components/work-card.css
@@ -5,6 +5,7 @@
   flex-direction: column;
   gap: var(--space-s);
   max-width: 35ch;
+  width: 100%;
 
   > .image {
     aspect-ratio: 1.6;
